# MoneyController

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  appveyor.yml  config.py  iv.yaml  logger.py  main.py  pyproject.toml  settings.toml
.circleci/: config.yml
.github/workflows/: ci.yml  contenedor_test.yml
.semaphore/: semaphore.yml
docs/: biblioteca_aserciones.md  ci.md  configuracion.md  contenedor_docker.md  gastos.csv  gestor_dependencias.md  gestor_tareas.md  herramientas_cli.md  historias_usuario.md  logs.md  milestones.md  test_runner.md  user_journeys.md
money_controller/: categoriaGasto.py  gasto.py  presupuesto.py
money_controller.egg-info/: SOURCES.txt  top_level.txt
pruebas_contenedores/: Dockerfile_debian_Python_1.13.1  Dockerfile_parte_optimizacion
src/: gasto.py  presupuesto.py
test/: test_config.py  test_gasto.py  test_logs.py
tests/: test_gasto.py
