[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "money_controller"
version = "0.1.0"
description = "sistema de gesti贸n de gastos"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.poetry]
name = "money_controller"
version = "0.1.0"
description = "Sistema de gesti贸n de gastos - Poetry"
authors = ["Juan Manuel Aneas Franco <e.juanmanuelaf@go.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.0"   # Verificaci贸n Sintaxis
black = "^23.0.0"   # Formateo de c贸digo
pytest = "^7.0.0"   # Pruebas