[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["money_controller*", "config*"] }

[project]
name = "money_controller"
version = "0.1.0"
description = "sistema de gestión de gastos"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    
]